--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете
-        использовать в своей жизни?<a href="#" class="header__link" target="_blank"
+        использовать в своей жизни?<a
+          href="#"
+          class="header__link"
+          target="_blank"
           >Узнать &rarr;</a
         >
       </p>
@@ -174,12 +177,12 @@
         <p class="section-subtitle">Про учебу и мозг</p>
         <div class="table">
           <div class="table__cell">
-            <h2 class="table__heading">86 миллиардов</h2>
+            <h3 class="table__heading">86 миллиардов</h3>
             <p class="table__text">Число нейронов в мозге человека</p>
           </div>
 
           <div class="table__cell">
-            <h2 class="table__heading">2.1 миллиарда</h2>
+            <h3 class="table__heading">2.1 миллиарда</h3>
             <p class="table__text">
               Число нуждающихся в повышении квалификации
             </p>
@@ -187,12 +190,12 @@
           </div>
 
           <div class="table__cell">
-            <h2 class="table__heading">1000 терабайт</h2>
+            <h3 class="table__heading">1000 терабайт</h3>
             <p class="table__text">Объём памяти человека</p>
           </div>
 
           <div class="table__cell">
-            <h2 class="table__heading">500 триллионов</h2>
+            <h3 class="table__heading">500 триллионов</h3>
             <p class="table__text">
               Число ответственных за обучение нервных синапсов у взрослого
               человека
@@ -200,7 +203,7 @@
           </div>
 
           <div class="table__cell">
-            <h2 class="table__heading">420 миллионов</h2>
+            <h3 class="table__heading">420 миллионов</h3>
             <p class="table__text">
               Число взрослых людей моложе 25 лет, не имеющих образования для
               трудоустройства
@@ -209,17 +212,17 @@
           </div>
 
           <div class="table__cell">
-            <h2 class="table__heading">17–20 лет</h2>
+            <h3 class="table__heading">17–20 лет</h3>
             <p class="table__text">Пик обучаемости</p>
           </div>
 
           <div class="table__cell">
-            <h2 class="table__heading">1885 год</h2>
+            <h3 class="table__heading">1885 год</h3>
             <p class="table__text">Открытие кривой забывания</p>
           </div>
 
           <div class="table__cell">
-            <h2 class="table__heading">1889 год</h2>
+            <h3 class="table__heading">1889 год</h3>
             <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
@@ -251,11 +254,7 @@
       </section>
 
       <section class="kaufman">
-        <img
-          class="kaufman__triangle rotation"
-          src="images/kaufman-triangle.svg"
-          alt="Треугольник"
-        />
+        <div class="kaufman__triangle rotation"></div>
 
         <h2 class="section-title section-title_theme_dark">
           Принципы обучения
@@ -265,69 +264,69 @@
         </p>
         <div class="table table_theme_dark">
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">1</h2>
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">
               Выберите привлекательный проект.
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">2</h2>
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
             <p class="table__text table__text_theme_dark"></p>
             <p>Сосредоточьтесь на каком-то одном навыке</p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">3</h2>
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
             <p class="table__text table__text_theme_dark">
               Определите целевой уровень мастерства
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">4</h2>
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
             <p class="table__text table__text_theme_dark">
               Разбейте навык на элементы
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">5</h2>
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme_dark">
               Приготовьте всё необходимое для занятий
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">6</h2>
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dark">
               Устраните препятствия для занятий
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">7</h2>
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
             <p class="table__text table__text_theme_dark">
               Выделите специальное время для занятий.
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">8</h2>
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme_dark">
               Создайте быстрые петли обратной связи
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">9</h2>
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme_dark">
               Занимайтесь по расписанию, короткими интенсивными интервалами.
             </p>
           </div>
 
           <div class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">10</h2>
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme_dark">
               Уделяйте внимание количеству и скорости
             </p>
@@ -336,35 +335,35 @@
       </section>
 
       <section class="resources">
-        <h2 class="section-title section-title_resources">Полезные ресурсы</h2>
+        <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle section-subtitle_resources">
           Больше материалов о техниках и лайфхаках обучения
         </p>
         <div class="resources__logo-zone">
-          <a href="#" target="_blank">
+          <a href="#" target="_blank" class="resources__link">
             <img
-              class="resources__link"
+              class="resources__logo"
               src="images/logo/resources-arzamas.svg"
               alt="Арзамас"
             />
           </a>
-          <a href="#" target="_blank">
+          <a href="#" target="_blank" class="resources__link">
             <img
-              class="resources__link"
+              class="resources__logo"
               src="images/logo/resources-n1.svg"
               alt="Н+1"
             />
           </a>
-          <a href="#" target="_blank">
+          <a href="#" target="_blank" class="resources__link">
             <img
-              class="resources__link"
+              class="resources__logo"
               src="images/logo/resources-strelka.svg"
               alt="Стрелка"
             />
           </a>
-          <a href="#" target="_blank">
+          <a href="#" target="_blank" class="resources__link">
             <img
-              class="resources__link"
+              class="resources__logo"
               src="images/logo/resources-polka.svg"
               alt="Полка"
             />
@@ -399,7 +398,7 @@
           </ul>
         </nav>
 
-        <nav class="footer__column_content_social">
+        <nav class="footer__column footer__column_content_social">
           <h2 class="footer__column-heading">О практикуме</h2>
           <ul class="footer__column-links">
             <li>
@@ -408,7 +407,8 @@
                   class="footer__social-icon"
                   src="images/youtube-icon.svg"
                   alt="Ютуб"
-                />YouTube</a
+                />
+                YouTube</a
               >
             </li>
             <li>
